correctly positions popup video click area on smallest mobile screens

--- a/src/modules/hero-banner.module/module.css
+++ b/src/modules/hero-banner.module/module.css
@@ -260,6 +260,12 @@
   }
 }
 
+@media screen and (max-width: 380px) {
+  .hero-media-player__popup {
+    top: 120%;
+  }
+}
+
 
 .hero-banner__media-section.form-section {
   background-color: #0F1E2D;
